# SchemeIn48h

./: LICENSE.md  README.md  SchemeIn48h.cabal
app/: Main.hs
src/: MyParser.hs
