name:                SchemeIn48h
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tatsuki-I/SchemeIn48h#readme
license:             BSD3
license-file:        LICENSE.md
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , MyParser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable myscheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , SchemeIn48h
  default-language:    Haskell2010

test-suite scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , SchemeIn48h
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tatsuki-I/SchemeIn48h
